# Esame-Pratico-Reti-19-12-2024

./: .gitignore  Booking Project.htm  README.md  gameEngine.c
Builds/: CMakeLists.txt
Client/: CMakeLists.txt  Client.c
Client/lib/: argChecker.h
Client/lib/wrappers/: addressTools.c  addressTools.h  customErrorPrinting.h  pollUtils.h
Server/: CMakeLists.txt  Server.c
Server/lib/warppers/: basicWrappers.c  basicWrappers.h
Server/lib/wrappers/: addressTools.c  addressTools.h  basicWrappers.c  basicWrappers.h  pollUtils.c
lib/: argChecker.c  argChecker.h
lib/gamelogics/: drawingField.c  drawingField.h  meteorites.c  meteorites.h
lib/wrappers/: addressTools.c  addressTools.h  basicWrappers.c  basicWrappers.h  bufHandlers.c  bufHandlers.h  customConnection.c  customConnection.h  customDNS.c  customDNS.h  customErrorPrinting.c  customErrorPrinting.h  customFifoTools.c  customFifoTools.h  customICMP.c  customICMP.h  customQueIPC.c  customQueIPC.h  customRecvFrom.c  customRecvFrom.h  customSendTo.c  customSendTo.h  customUDPTransmission.c  customUDPTransmission.h  pollUtils.c  pollUtils.h
